--- a/Grafico/RegistrarUsuario.form
+++ b/Grafico/RegistrarUsuario.form
@@ -64,7 +64,7 @@
               <text value="Nombre"/>
             </properties>
           </component>
-          <component id="bb3f0" class="javax.swing.JTextField" binding="tfNombre">
+          <component id="bb3f0" class="javax.swing.JTextField" binding="tf_nombre">
             <constraints>
               <grid row="6" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -72,13 +72,15 @@
             </constraints>
             <properties/>
           </component>
-          <component id="9596" class="javax.swing.JPasswordField" binding="tfContrasena">
+          <component id="9596" class="javax.swing.JPasswordField" binding="tf_contrasena">
             <constraints>
               <grid row="18" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <text value=""/>
+            </properties>
           </component>
           <component id="1e0cc" class="javax.swing.JLabel">
             <constraints>
@@ -88,7 +90,7 @@
               <text value="Contraseña"/>
             </properties>
           </component>
-          <component id="2a991" class="javax.swing.JTextField" binding="tfCorreo">
+          <component id="2a991" class="javax.swing.JTextField" binding="tf_correo">
             <constraints>
               <grid row="12" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -104,7 +106,7 @@
               <text value="Correo"/>
             </properties>
           </component>
-          <component id="e7751" class="javax.swing.JTextField" binding="tfApellido">
+          <component id="e7751" class="javax.swing.JTextField" binding="tf_apellido">
             <constraints>
               <grid row="9" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -135,7 +137,7 @@
               <grid row="26" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
-          <component id="707f8" class="javax.swing.JButton" binding="BtnLogin">
+          <component id="707f8" class="javax.swing.JButton" binding="btn_login">
             <constraints>
               <grid row="23" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -150,7 +152,7 @@
               <grid row="24" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
-          <component id="96c94" class="javax.swing.JButton" binding="BtnEnviar">
+          <component id="96c94" class="javax.swing.JButton" binding="btn_enviar">
             <constraints>
               <grid row="19" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
